--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "python_vercel_task/wsgi"
+        "dest": "python_vercel_task/wsgi.py"
       }
     ]
   }
-   
